estimate fees for jetons ERC20
